Update authorization code